# generate-manifest-list

./: Cargo.toml  README.md
.github/: renovate.json5
.github/workflows/: cron.yml  rust.yml
src/: main.rs
