[package]
name = "generate-nightly-list"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_s3 = "0.40"
rusoto_core = "0.40"
dotenv = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
csv = "1"
